--- a/my-sweet-kiki.html
+++ b/my-sweet-kiki.html
@@ -7,7 +7,9 @@
     <h1>My Beautiful Kiki</h1>
     <br></br>
     <h2>Our Story</h2>
-    <p>I found Kiks on the streets of New Orleans. Out of all of the chupacabras, my eyes immediately went straight to the beautiful beast. I have not been able to take my eyes off him ever since.</p>
+
+    <p>I found <strong>Kiks</strong> on the streets of New Orleans. Out of all of the chupacabras, my eyes immediately went straight to the <em>beautiful</em> beast. I have not been able to take my eyes off him ever since.</p>
+
     <br></br>
     <h2>Some great things about Kiki:</h2>
       <ol>
@@ -26,6 +28,11 @@
         <li>Walks on the waterfront at midnight</li>
         <li>Facemasks</li>
         <li>Eating our friends</li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=n2IHlHavYco">
+            Watching YouTube videos
+          </a>
+        </li>
       </ul>
       <br></br>
       <p>Scroll down further to see a photo of my sweet boy.</p>
